# rgrid

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  catch.hpp  mpi_test.sh  test.sh  test_darray.cpp
examples/le2d_mpi/: Makefile  le_core.cpp  le_core.h  main.cpp
generators/: fdcgen.cpp
include/rgrid/: clutils.h  darray.h  darraycontainer.h  darrayscatter.h  debug.h  fdc.h  fdcoeff.h  gridoperator.h  nodeoperator.h  pdim.h  pdimraw.h  range.h  rgio.h  rgmpi.h  taskparams.h  types.h
rgrid/: clutils.h  clwrapper.h  darray.h  darraycontainer.h  darrayscatter.h  pdim.h  pdimraw.h  rgcut.h  rgio.h  rgmpi.h  rgopencl.h  types.h  utils.h  vtksaver.h
rgrid/src/: clutils.cpp  clwrapper.cpp  darraycontainer.cpp  rgio.cpp  rgmpi.cpp  utils.cpp  vtksaver.cpp
src/: clutils.cpp  debug.cpp  utils.cpp
tests/: test_clwrapper.cpp  test_darray  test_darray.cpp  test_darraycontainer.cpp  test_darrayscatter.cpp  test_pdim  test_pdim.cpp  test_rgio.cpp
